src/objects/AtRiskStudent__c.object
<CustomObject>
    <description>Contains Student At Risk data.</description>
    <fields>
        <fullName>ActivityConcerns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Concerns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastRiskEventDate__c</fullName>
        <label>Last Risk Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastRiskEventType__c</fullName>
        <label>Last Risk Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastTotalRiskCount__c</fullName>
        <label>Last Total Risk Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastTrendUpdated__c</fullName>
        <label>Last Trend Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObjectiveFailCount__c</fullName>
        <label>Objective Assessment Fail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PastEndDateCount__c</fullName>
        <label>Past End Date Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PerformanceFailCount__c</fullName>
        <label>Performance Assessment Fail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RiskTrend__c</fullName>
        <label>Risk Trend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentDisplayName__c</fullName>
        <label>Student Display Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>Student ID</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>Student Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>At Risk Students</relationshipLabel>
        <relationshipName>At_Risk_Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalRiskCount__c</fullName>
        <label>Total Risk Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrendCalculatedSince__c</fullName>
        <description>Previous Trend Calculation Date</description>
        <label>Trend Calculated Since</label>
        <type>DateTime</type>
    </fields>
    <label>At Risk Student</label>
    <nameField>
        <label>At Risk Student PIDM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>At Risk Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>